Add links to other pages

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 	<section class="linewave">
 		<img src="assets/book3.jpg" alt="">
 	</section>
+	<footer>
+		<ul>
+			<li><a href="/ripple.html">Background ripple</a></li>
+			<li><a href="/background.html">Interactive background</a></li>
+		</ul>
+	</footer>
 
 
 
