--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 	</section>
 	<footer>
 		<ul>
-			<li><a href="/ripple.html">Background ripple</a></li>
-			<li><a href="/background.html">Interactive background</a></li>
+			<li><a href="/pixi.js-gallery/ripple.html">Background ripple</a></li>
+			<li><a href="/pixi.js-gallery/background.html">Interactive background</a></li>
 		</ul>
 	</footer>
 
